Solucion completa sin probar

--- a/BUCEF/appsettings.json
+++ b/BUCEF/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
-}
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "PersonasContext": "Server=HANTOR\\LOCAL;Database=BUCEF;user=sa, pw:database;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
+  }
